; ModuleID = '/home/carl/AnghaBench/mongoose/examples/nRF51/http/extr_bleconfig.c_nrf51_driver_interface_up.c'
source_filename = "/home/carl/AnghaBench/mongoose/examples/nRF51/http/extr_bleconfig.c_nrf51_driver_interface_up.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [29 x i8] c"[APPL]: IPv6 interface up.\0D\0A\00", align 1
@TCP_STATE_REQUEST_CONNECTION = common dso_local global i32 0, align 4
@m_tcp_state = common dso_local global i32 0, align 4
@m_sys_timer_id = common dso_local global i32 0, align 4
@LWIP_SYS_TIMER_INTERVAL = common dso_local global i32 0, align 4
@ADVERTISING_LED = common dso_local global i32 0, align 4
@CONNECTED_LED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nrf51_driver_interface_up() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 @APPL_LOG(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0))
  %3 = call i32 (...) @sys_check_timeouts()
  %4 = load i32, i32* @TCP_STATE_REQUEST_CONNECTION, align 4
  store i32 %4, i32* @m_tcp_state, align 4
  %5 = load i32, i32* @m_sys_timer_id, align 4
  %6 = load i32, i32* @LWIP_SYS_TIMER_INTERVAL, align 4
  %7 = call i32 @app_timer_start(i32 %5, i32 %6, i32* null)
  store i32 %7, i32* %1, align 4
  %8 = load i32, i32* %1, align 4
  %9 = call i32 @APP_ERROR_CHECK(i32 %8)
  %10 = load i32, i32* @ADVERTISING_LED, align 4
  %11 = call i32 @LEDS_OFF(i32 %10)
  %12 = load i32, i32* @CONNECTED_LED, align 4
  %13 = call i32 @LEDS_ON(i32 %12)
  ret void
}

declare dso_local i32 @APPL_LOG(i8*) #1

declare dso_local i32 @sys_check_timeouts(...) #1

declare dso_local i32 @app_timer_start(i32, i32, i32*) #1

declare dso_local i32 @APP_ERROR_CHECK(i32) #1

declare dso_local i32 @LEDS_OFF(i32) #1

declare dso_local i32 @LEDS_ON(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
